[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Muhammad Hassaan Shaukat <mr.hassaan50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = "^2.0.28"
psycopg2 = "^2.9.9"
sqlmodel = "^0.0.16"
pytest = "^8.1.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
